# chip8_emulator

./: Makefile  README.md  meson.build  run.sh
include/: vm.hpp
include/components/: keyboard.hpp  memory.hpp  registers.hpp  screen.hpp  stack.hpp
include/util/: brief_int.hpp  byte_suffixes.hpp
src/: chip8.cpp  chip8.hpp  main.cpp
src/components/: memory.cpp  registers.cpp  screen.cpp  stack.cpp
tests/: sdl_test.cpp
